Security hardening updates

--- a/templates/browser.html
+++ b/templates/browser.html
@@ -240,7 +240,7 @@
         </div>
     </div>
 
-    <script>
+    <script nonce="{{ csp_nonce }}">
         let hierarchyData = {};
         let selectedCategory = null;
         let selectedSubcategory = null;
